# Wikipedia-Map

./: .env.example  .gitignore  CLAUDE.md  HISTORY.md  LEARN.md  README.md  pyproject.toml
.claude/: settings.json  statusline.ps1
src/wikimap/: __init__.py  config.py  embed.py  feedback.py
src/wikimap/algorithms/: __init__.py  base.py
src/wikimap/algorithms/connect/: __init__.py  astar.py  bfs.py  greedy.py
src/wikimap/algorithms/explore/: __init__.py  beam.py  bfs.py
src/wikimap/graph/: __init__.py  contracts.py  model.py
src/wikimap/server/: __init__.py  app.py
src/wikimap/server/static/: app.js  index.html  style.css
src/wikimap/wiki/: __init__.py  cache.py  client.py
tests/: test_embed.py  test_feedback.py  test_graph.py  test_wiki_client.py
