[project]
name = "wikimap"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "wikipedia-api>=0.6",            # proven link fetching from the old repo
    "python-dotenv>=1.0",            # loads USER_AGENT from .env
    "networkx>=3.3",
    "sentence-transformers>=3.0",    # embeddings — powers BOTH the top-20 cap and feedback
]

[project.optional-dependencies]
# async upgrade for the fetch layer, only if caching isn't enough:
# async = ["httpx>=0.27"]
dev = ["pytest>=8", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wikimap"]

[tool.pytest.ini_options]
pythonpath = ["src"]
